--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -63,12 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +91,7 @@
     "from pathlib import Path\n",
     "source='Farah.ttc'\n",
     "os_name=platform.system()\n",
-    "_data={\"Darwin\":\"/Library/Fonts/\",\"Linux\":\"/.font/\"}\n",
+    "_data={\"Darwin\":\"/Library/Fonts/\",\"Linux\":\"/.font/\",\"Windows\":\"C:\\\\Windows\\\\Fonts\"}\n",
     "destination=str(Path.home())+_data[os_name]+source\n",
     "path=Path(destination)\n",
     "if path.exists()==False:\n",
