google fonts used

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,22 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>\n",
+       "<style type=\"text/css\">@import url('http://fonts.googleapis.com/css?family=Amiri|Cairo');\n",
+       "\n",
        ".title{\n",
        "direction: rtl;\n",
        "padding-right: 2cm;\n",
        "line-height:10px;\n",
-       "font-family:farah;\n",
+       "font-family:Cairo;\n",
        "\n",
        "}\n",
        "\n",
@@ -28,7 +34,7 @@
        "padding-right: 1cm;\n",
        "padding-left: 1cm;\n",
        "text-align:justify;\n",
-       "font-family:molhim;\n",
+       "font-family:Amiri;\n",
        "}\n",
        "\n",
        ".horizontal{\n",
@@ -45,12 +51,13 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import IPython\n",
     "from IPython.core.display import HTML\n",
     "\n",
     "def _set_css_style(css_file_path):\n",
@@ -60,21 +67,52 @@
     "   \"\"\"\n",
     "\n",
     "   styles = open(css_file_path, \"r\").read()\n",
-    "   s = '<style>%s</style>' % styles     \n",
+    "   s = '<style type=\"text/css\">%s</style>' % styles     \n",
     "   return HTML(s)\n",
     "_set_css_style(\"custom.css\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "var data=document.getElementById(\"jupyter-config-data\");\n",
+       "var dt=JSON.parse(data.text)\n",
+       "alert(dt.token)\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "var data=document.getElementById(\"jupyter-config-data\");\n",
+    "var dt=JSON.parse(data.text)\n",
+    "alert(dt.token)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "driver=webdriver.Chrome()\n",
+    "driver.get(\"http://localhost:8888/lab\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -87,28 +125,25 @@
    ],
    "source": [
     "# copy font file to user Font directory\n",
-    "import platform, shutil\n",
-    "from pathlib import Path\n",
-    "source='Farah.ttc'\n",
-    "os_name=platform.system()\n",
-    "_data={\"Darwin\":\"/Library/Fonts/\",\"Linux\":\"/.font/\",\"Windows\":\"C:\\\\Windows\\\\Fonts\"}\n",
-    "destination=str(Path.home())+_data[os_name]+source\n",
-    "path=Path(destination)\n",
-    "if path.exists()==False:\n",
-    "    shutil.copyfile(source, destination)\n",
-    "    print(\"File copyied successfully\")\n",
-    "else:\n",
-    "    print(\"File already exists\")"
+    "# copy font file to user Font directory\n",
+    "#import platform, shutil\n",
+    "#from pathlib import Path\n",
+    "#source='Farah.ttc'\n",
+    "#os_name=platform.system()\n",
+    "#_data={\"Darwin\":\"/Library/Fonts/\",\"Linux\":\"/.font/\",\"Windows\":\"C:\\\\Windows\\\\Fonts\"}\n",
+    "#destination=str(Path.home())+_data[os_name]+source\n",
+    "#path=Path(destination)\n",
+    "#if path.exists()==False:\n",
+    "    #shutil.copyfile(source, destination)\n",
+    "    #print(\"File copyied successfully\")\n",
+    "#else:\n",
+    "    #print(\"File already exists\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -178,6 +213,13 @@
     "        return false;\n",
     "    }}\n",
     ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hello my tk "
    ]
   },
   {
