google font changed

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style type=\"text/css\">@import url('http://fonts.googleapis.com/css?family=Amiri|Cairo');\n",
+       "<style type=\"text/css\">@import url('http://fonts.googleapis.com/css?family=Amiri|Lalezar');\n",
        "\n",
        ".title{\n",
        "direction: rtl;\n",
        "padding-right: 2cm;\n",
        "line-height:10px;\n",
-       "font-family:Cairo;\n",
+       "font-family:Lalezar;\n",
        "\n",
        "}\n",
        "\n",
@@ -51,7 +42,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,8 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -101,8 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
@@ -113,7 +112,11 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,7 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
