change font from google to fontface

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style type=\"text/css\">@import url('http://fonts.googleapis.com/css?family=Amiri|Lalezar');\n",
+       "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,basim-marah,amiri-quran,b-compset');\n",
        "\n",
        ".title{\n",
        "direction: rtl;\n",
+       "font-size:60px;\n",
        "padding-right: 2cm;\n",
        "line-height:10px;\n",
-       "font-family:Lalezar;\n",
+       "font-family:yassin;\n",
        "\n",
        "}\n",
        "\n",
@@ -25,7 +26,7 @@
        "padding-right: 1cm;\n",
        "padding-left: 1cm;\n",
        "text-align:justify;\n",
-       "font-family:Amiri;\n",
+       "font-family:amiri-quran;\n",
        "}\n",
        "\n",
        ".horizontal{\n",
@@ -42,13 +43,12 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import IPython\n",
     "from IPython.core.display import HTML\n",
     "\n",
     "def _set_css_style(css_file_path):\n",
@@ -66,11 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -96,17 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
     "driver=webdriver.Chrome()\n",
-    "driver.get(\"http://localhost:8888/lab\")"
+    "#driver.get(\"http://localhost:8888/lab\")\n",
+    "driver.get(\"https://nbviewer.jupyter.org\")\n",
+    "\n",
+    "url=driver.find_element_by_id(\"main-input\")\n",
+    "url.clear()\n",
+    "url.send_keys(\"https://github.com/AhmadAlsaadi/Arabic-python-notebook/blob/master/Introduction.ipynb\")\n",
+    "time.sleep(2)\n",
+    "url.send_keys(Keys.ENTER)"
    ]
   },
   {
@@ -1112,22 +1113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "n=100\n",
     "n=50\n",
     "print(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython"
    ]
   },
   {
