--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
     "الفصل الثالث:\n",
     "</strong>\n",
     "<a href=\"#chapter3\">\n",
-    "التعامل مع القوائم\n",
+    "التعامل مع البيانات التجميعية\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
@@ -2609,11 +2609,87 @@
     "<center>\n",
     "<a id=\"chapter3\"></a>\n",
     "<h1 class=title>\n",
-    "الفصل الثالث : التعامل مع القوائم\n",
+    "الفصل الثالث : التعامل مع البيانات التجميعية (Collection Data)\n",
     "</h1>\n",
     "</center>\n",
     "<hr class=horizontal>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "في الفصل السابق تعلمنا كيفية التعامل مع البيانات الأساسية وكان كل بيان من تلك البيانات يمثل معلومة مستقلة بذاتها. اما في هذا الفصل فسوف نوسع مفهوم البيانات الى نطاق أوسع بحيث يتم ترتيب هذه البيانات الأساسية بطريقة خاصة في مجموعات فتصبح هذه البيانات مستقلة بذاتها. \n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "\n",
+    "<h2 class=title>\n",
+    "أهداف الباب\n",
+    "</h2>\n",
+    "عند اتمام هذا الفصل يجب ان يكون لديك المام بالآتي: \n",
+    "\n",
+    "<ol>\n",
+    "<li> \n",
+    "التعرف على البيانات التجمعية وأنواعها الرئيسية. \n",
+    "</li>\n",
+    "<li>\n",
+    "معرفة التعامل مع الانواع الأساسية للبيانات التجميعية.\n",
+    "</li>\n",
+    "<li>\n",
+    "التمييز بين الانواع الأساسية للبيانات التجميعية من خلال معرفة خصائص كل نوع.\n",
+    "</li>\n",
+    "\n",
+    "<li>\n",
+    "التوسع في معرفة البيانات النصية وكيفية التعامل معها. \n",
+    "</li>\n",
+    "</ol>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic><h2 class=title>تعريف البيانات التحميعية</h2></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "المقصود بالبيانات التجميعية في لغة بايثون هي بيانات أساسية (سواء كانت عددية او نصية او منطقية) اندرجت تحت مجموعة لها خصائص معينه ومحددة فأصبحت بيانات مستقلة بذاتها يتعامل معها مفسر بايثون بطريقة خاصة. وتنقسم هذه البيانات التجميعية الى أربعة أنواع رئيسية:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "    <ol>\n",
+    "        <li>القوائم (lists)</li>\n",
+    "        <li>الصفوف (tuples)</li>\n",
+    "        <li>القواميس (dictionaries)</li>\n",
+    "         <li>المجموعات (sets)</li>\n",
+    "    </ol>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic><h2 class=title>القوائم</h2></div>"
    ]
   },
   {
@@ -2680,18 +2756,29 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    " لاضافة بيانات لقائمة قارغة يمكن استخدام الامر \n",
+    " لاضافة بيانات لقائمة قارغة او قائمة تحتوي على بيانات سابقة يمكن استخدام الامر \n",
     "()<font color=\"green\">append</font>\n",
-    ". كما في المثال التالي:\n",
+    " بحيث يكون البيان المضاف دائما في اخر القائمة كما في المثال التالي:\n",
     "</div>\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sunday', 'Monday', 'Tuesday']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1=[]\n",
     "list1.append('Sunday')\n",
@@ -2839,7 +2926,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    " للحصول على أخر قيمة في القائمة list2 السابقة نكتب الامر التالي:\n",
+    " فللحصول على أخر قيمة في القائمة list2 السابقة نكتب الامر التالي:\n",
     "</div>"
    ]
   },
@@ -2860,6 +2947,228 @@
     "للحصول على القيمة قبل الاخيره في قائمة فاننا نستخدم الموشر 2- داخل القوسين المربعين و 3- للقيمة التي بعدها وهكذا لباقي القيم في القائمة.\n",
     "</div>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "كما يمكننا ان نغير قيم البيانات داخل قائمة باستخدام معامل الاسناد (=) كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Omar', 1990, True, 23.5]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2=[\"Ahmad\",1990,True,23.5]\n",
+    "list2[0]=\"Omar\"\n",
+    "list2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "ولمعرفة مؤشر بيان ما داخل قائمة فإننا نستخدم الدالة ()index بحيث نضع البيان المراد معرفة مؤشره داخل قوسي الدالة كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2=[\"Ahmad\",1990,True,23.5]\n",
+    "list2.index(1990)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2.index(23.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2.index(\"Ahmad\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "ولمعرفة عدد البيانات في قائمة فإننا نستخدم الدالة ()len كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2=['Ahmad', 1990, 'Hello', True, 23.5]\n",
+    "len(list2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "في مثال سابق تعلمنا كيف نضيف بيان الى قائمة باستخدام الامر ()append وعلمنا ان هذا الامر يقوم بإضافة البيان الى اخر القائمة. لكن ماذا لو أردنا ان نضيف بياناً في مكان معين من قائمة. لأداء هذه المهمة نستخدم الامر ()insert وكيفية استخدام هذا الامر يتطلب أولا ادخال مؤشر البيان داخل القائمة التي سوف يحتلها البيان المراد إدخاله ومن ثم قيمة البيان كما هو موضح في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ahmad', 1990, 'Hello', True, 23.5]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2=['Ahmad', 1990, True, 23.5]\n",
+    "list2.insert(2,\"Hello\")\n",
+    "list2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "ولإزالة بيان من قائمة فان هناك عدة دوال تساعدنا على القيام بذلك بطرق مختلفة. فعندما نريد إزالة اخر بيان في قائمة فإننا نستخدم الدالة ()pop كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ahmad', 1990, 'Hello', True]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2=['Ahmad', 1990, 'Hello', True, 23.5]\n",
+    "item_removed=list2.pop()\n",
+    "list2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.5"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_removed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "هنا الدالة ()pop قامت بحذف اخر بيان من القائمة وارجعت البيان الذي تم حذفه بحيث اصبح بإمكاننا اسناد ما تم حذفه الى متغير كما فعلنا في المثال السابق\n",
+    "</div>"
    ]
   },
   {
