--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +79,17 @@
        ".s{\n",
        "    line-height:unset;\n",
        "    height:unset;\n",
-       "}</style>"
+       "}\n",
+       ".CodeMirror-wrap {\n",
+       "    font-size:16px;\n",
+       "}\n",
+       "</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,8 +464,7 @@
    "source": [
     "<div class=arabic>\n",
     "  <h4 class=title>ثانياً: تصيب توزيعة Anaconda على نظام ماك</h4>  \n",
-    "</div>\n",
-    "\n"
+    "</div>"
    ]
   },
   {
@@ -6920,7 +6923,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "لاحظ انه عندما قمنا بتحويل النص numbers الى حروف كبيرة قام بايثون بانشاء متغير مؤقت وطبع النص بعد التعديل على الشاشة. ولكن عندما طلبنا من بايثون طباعة النص الأصلي فان النص مازال كما هو بحروفه الصغيرة. هذا الخاصية لا تنطبق على القوائم. فعندما نقوم بالتعديل على القوائم فان بايثون يجري عملية التعديل على القائمة الاصلية كما في المثال التالي:\n",
+    "    لاحظ انه عندما قمنا بتحويل النص numbers الى حروف كبيرة قام بايثون بانشاء متغير مؤقت وطبع النص بعد التعديل على الشاشة. ولكن عندما طلبنا من بايثون طباعة النص الأصلي فان النص مازال كما هو بحروفه الصغيرة. هذا الخاصية لا تنطبق على القوائم. فعندما نقوم بالتعديل على القوائم فان بايثون يجري عملية التعديل على القائمة الاصلية كما في المثال التالي:\n",
     "</div>"
    ]
   },
