removed my name from the book title and did little change on subtitle format

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
        ".title{\n",
        "direction: rtl;\n",
        "font-size:100px;\n",
-       "padding-right: 2cm;\n",
+       "padding-right: 15px;\n",
        "line-height:10px;\n",
        "font-family:basim-marah;\n",
        "\n",
@@ -90,7 +90,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/title.png\" width=700>"
+    "<img src=\"img/python.png\" width=\"200px\" align=\"right\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr align=\"right\" width=\"300px\">\n",
+    "<div class=arabic >\n",
+    "    <h1 class=title align=\"center\" style=\"font-size:70px\" margin=\"0px\" padding=\"0px\">قرة العيون في تبسيط لغة بايثون</h1>\n",
+    "</div>\n",
+    "<hr align=\"left\" width=\"300px\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/python.png\" style=\"width:200px;  margin:0px; transform:rotate(180deg)\" align=\"left\">"
    ]
   },
   {
@@ -122,7 +140,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "<h2 class=title>\n",
+    "<h2 class=title style=\"padding-right:15px;\">\n",
     "مقدمة\n",
     "</h2>\n",
     "</div>"
@@ -145,7 +163,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "<hr class=horizontal>\n",
+    "<br>\n",
     "<center>\n",
     "<h1 class=title>\n",
     "المحتويات\n",
@@ -203,7 +221,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "<hr class=horizontal>\n",
+    "<br>\n",
     "<center>\n",
     "<a id=\"chapter1\"></a>\n",
     "<h1 class=title>\n",
@@ -9681,7 +9699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   },
   "toc": {
    "navigate_menu": true,
